Sum of two arbitrary length numbers represented as ll's; longest palindrome (Manacher's algorithm, not sure I understand how it's working).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(leetcode)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(leetcode main.cpp)
+add_executable(leetcode
+        # leetcode/sum_of_two_numbers.cpp
+        # leetcode/sum_two_numbers_upd.cpp
+        leetcode/longest_palindromic.cpp)
