solved several tasks from leetcode june challenge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(leetcode
         # leetcode/sum_of_two_numbers.cpp
         # leetcode/sum_two_numbers_upd.cpp
-        leetcode/longest_palindromic.cpp)
+        # leetcode/longest_palindromic.cpp
+        # leetcode/invert_binary_tree.cpp
+        # leetcode/delete_node_ll.cpp
+        # leetcode/single_number_two.cpp
+        leetcode/perfect_squares.cpp)
